BugFix
-carousel fixed.
-filter fixed.

TODO:
videos not showing because of promise

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -140,7 +140,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  /*border: 1px solid green;*/
+  border: 1px solid green;
   margin-top: 20px;
   margin-bottom: 20px;
 }
